Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
See https://travis-ci.org/apache/arrow/jobs/485716603#L4746
/home/travis/build/apache/arrow/cpp/src/arrow/compute/kernel.h:170: error: The following parameters of arrow::compute::UnaryKernel::Call(FunctionContext *ctx, const Datum &input, Datum *out)=0 are not documented: parameter 'ctx' parameter 'input' (warning treated as error, aborting now)
Attachments
Issue Links
- links to