ARROW-4417: [C++] Fix doxygen build